Login Page Final

--- a/src/app/components/loginPage/loginPage.component.html
+++ b/src/app/components/loginPage/loginPage.component.html
@@ -5,6 +5,12 @@
     </div>
   </div>
   <div class="right-side">
+    <span>
+      <img
+        src="assets/svg/settings.svg"
+        style="height: 25px; padding: 30px 40px"
+      />
+    </span>
     <div class="login-box">
       <app-login></app-login>
     </div>
