added autofocus for email input field on init

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -22,6 +22,7 @@
           email="true"
           (focus)="emailFocus = true"
           (focusout)="emailFocus = false"
+          autofocus
           required
         />
       </div>
