--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -29,3 +29,44 @@
     }
   }
 }
+
+.static-card {
+  background-color: #eceff1;
+  .arrow {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    width: 40px;
+    cursor: pointer;
+    &:hover {
+      background-color: #e3e6e8;
+      border-radius: 100%;
+    }
+  }
+}
+
+.meeting-card {
+  .data {
+    .circle-background {
+      img {
+        height: 40px;
+      }
+    }
+  }
+  .arrow {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    width: 40px;
+    cursor: pointer;
+    &:hover {
+      background-color: #eceff1;
+      border-radius: 100%;
+    }
+  }
+}
+
+.metric-card {
+}
